--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ html,
 body {
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 .main-content,
@@ -10,7 +11,7 @@ body {
   display: inline-block;
 }
 
-.header {
+.to-do-header {
   background-color: wheat;
   text-align: center;
   padding: 10px;
@@ -39,6 +40,15 @@ body {
 .todo-item {
   padding: 10px;
   font-size: 20px;
+}
+
+li {
+  margin: auto;
+}
+
+.list-items-div {
+  margin: auto;
+  width: 500px;
 }
 
 button {
